[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
hex = "0.4.3"
rmp-serde = "1.3.0"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
